# CImgProc

./: .gitignore  CMakeLists.txt  README.md
CLImgProc/: CLAlgorithm.cpp  CLAlgorithm.h  CLConvert2Gray.cpp  CLConvert2Gray.h  CLConvolution.cpp  CLDifference.cpp  CLDifference.h  CLDiffuse.cpp  CLInstance.cpp  CMakeLists.txt
CLImgProc/cl_srcs/: array_difference.cl  convert2gray.cl  convolution.cl  diffuse.cl  includes.cl
cl_srcs/: array_difference.cl  convert2gray.cl  convolution.cl  diffuse.cl  includes.cl
example/: CLAlgExample.cpp  CLAlgExample.h  CLAlgorithm.cpp  CLAlgorithm.h  CLConvert2Gray.cpp  CLConvert2Gray.h  CLConvolution.cpp  CLConvolution.h  CLDifference.cpp  CLDifference.h  CLDiffuse.cpp  CLDiffuse.h  CLInstance.cpp  CLInstance.h  CMakeLists.txt  ImageAlgExample.cpp  ImageAlgExample.h  JamExecution.cpp  JamExecution.h  eigen.h  main.cpp
include/: CImgProc.h  JamImageAlg.h  JamMath.h  JamUtility.h
include/jam/: JamImageAlg.h  JamMath.h
lib/: CLImgProc.lib
scripts/: link_climgproc.txt  link_cv.cmake  link_eigen.cmake  link_httplib.cmake  link_opencl.cmake
